# agentweave

./: .contextignore  .cursorignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-task.md
.github/workflows/: README.md  publish.yml  test.yml
agentweave/: cli.py  decorators.py  propagation.py  proxy.py  schema.py
benchmarks/: proxy_latency.py
dashboard/: Dockerfile  SPEC.md  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
deploy/: validate-secrets.sh
deploy/docker/: Dockerfile
docs/: DEPLOYMENT-RUNBOOK.md  STATUS.md  attribution-runbook.md  benchmarks.md  claude-code-hooks.md  claude-code-proxy.md  compatibility.md  data-quality-gate.md  demo-traces.md  deterministic-trace-ids.md  langfuse-dual-export.md  langfuse-eval-mapping.md  langfuse-v3-hybrid-runbook.md  linkedin-causality-draft.md  linkedin-draft-v1.md  openclaw-integration.md  production-hardening.md  project-tracking.md  proxy-setup.md  session-grouping.md  session-project-context-max.md  session-project-context.md  span-linking-design.md  versioning.md  website-readiness-audit-2026-05-28.md
examples/: README.md  nix_max_delegation.py
proxy/: README.md
screenshots/: README.md
scripts/: build-openclaw-bridge-dist.sh  claude-delegate.sh  compatibility-smoke.sh  deploy-dashboard.sh  deploy.sh  npm-publish-preflight.sh  trace_quality_gate.py  validate-claude-delegate.sh  verify.sh
sdk-go/: README.md  agentweave.go  decorators.go  decorators_test.go  go.mod
sdk-js/: README.md  jest.config.mjs  package-lock.json  package.json
sdk-python/: README.md
tests/: test_decorators.py  test_trace_quality_gate.py
(+153 files in other folders)
